Fixed the display of "hamburger" so that it does not conflict with the welcome inscription for the admin on mobile devices.

--- a/project/static/css/style.css
+++ b/project/static/css/style.css
@@ -77,11 +77,12 @@ hr {
     margin-left: -200px;
 }
 
-@media (max-width: 1130px) {
+@media (min-width: 483px) and (max-width: 1130px) {
     .main-name {
       padding-right: 150px;
     }
   }
+  
 
 /* Cafe name in card color */
 
